--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,24 +1,24 @@
 version: '3.8'
 
 services:
-  app:
+  web:
     build: .
     ports:
-      - "8080:80"
-    depends_on:
-      - db
+      - "10000:80"
     environment:
       - DB_HOST=db
       - DB_USER=root
-      - DB_PASSWORD=root
+      - DB_PASSWORD=password
       - DB_NAME=task_manager
+    depends_on:
+      - db
 
   db:
     image: mysql:5.7
     restart: always
     environment:
-      MYSQL_ROOT_PASSWORD: root
       MYSQL_DATABASE: task_manager
+      MYSQL_ROOT_PASSWORD: password
     volumes:
       - db_data:/var/lib/mysql
 
