--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,23 +4,17 @@ services:
   web:
     build: .
     ports:
-      - "10000:80"
+      - "10000:10000"
     environment:
       - DB_HOST=db
       - DB_USER=root
-      - DB_PASSWORD=password
+      - DB_PASSWORD=root     
       - DB_NAME=task_manager
     depends_on:
       - db
 
   db:
     image: mysql:5.7
-    restart: always
     environment:
+      MYSQL_ROOT_PASSWORD: root   
       MYSQL_DATABASE: task_manager
-      MYSQL_ROOT_PASSWORD: password
-    volumes:
-      - db_data:/var/lib/mysql
-
-volumes:
-  db_data:
